# WinPublicIP-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: code-review.md  codereview-20260509-010355.md  codereview-20260509-011436.md  codereview-20260509-101020.md  codereview-20260509-101854.md  codereview-20260509-102244.md  implementation-plan.md
resources/: resources.rc
src/: SettingsDialog.cpp  SettingsDialog.h  TrayApp.cpp  TrayApp.h  main.cpp
src/Config/: AppSettings.cpp  AppSettings.h
src/Rendering/: FlagLoader.cpp  FlagLoader.h  TrayRenderer.cpp  TrayRenderer.h
src/Services/: GeoProvider.cpp  GeoProvider.h  HttpHelper.cpp  HttpHelper.h  IpProvider.cpp  IpProvider.h  VpnDetector.cpp  VpnDetector.h
